--- a/teste.html
+++ b/teste.html
@@ -1,11 +1,125 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <table>
+        <caption>
+            População dos Estados Brasileiros-2024
+        </caption>
+        <thead>
+            <tr>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 100px">População</th>
+                <th scope="col">Comando HTML utilizado</th>
+            </tr>
+
+        </thead>
+        <tbody>
+            <tr>
+                <td>Acre</td>
+                <td class="num">830.018</td>
+                <td> 'Negrito' e 'Destacado'</td>
+            </tr>
+            <tr>
+                <td>Alagoas</td>
+                <td class="num">3.365.351</td>
+                <td>'Itálico'</td>
+            </tr>
+            <tr>
+                <td>Amapá</td>
+                <td class="num">877.613</td>
+                <td>'Texto sublinhado'</td>
+            </tr>
+            <tr>
+                <td>Amazonas</td>
+                <td class="num">4.269.995</td>
+                <td>'Texto riscado' e 'Texto sublinhado'</td>
+            </tr>
+            <tr>
+                <td>Bahia</td>
+                <td class="num">14.141.626</td>
+                <td>'Texto sobrescrito'</td>
+            </tr>
+            <tr>
+                <td>CE</td>
+                <td class="num">9.240.580</td>
+                <td>'Abreviação'</td>
+            </tr>
+            <tr>
+                <td>Distrito Federal</td>
+                <td class="num">3.098.883</td>
+                <td>'Texto em negrito'</td>
+            </tr>
+            <tr>
+                <td>"Espirito Santo"</td>
+                <td class="num">4.108.508</td>
+                <td>'"Citação curta"'</td>
+            </tr>
+            <tr>
+                <td>Goiás</td>
+                <td class="num">7.206.589</td>
+                <td>'Citação de fonte'</td>
+            </tr>
+            <tr>
+                <td>Maranhão</td>
+                <td class="num">6.775.805</td>
+                <td>'Texto monoesoaçado'</td>
+            </tr>
+            <tr>
+                <td>Mato Grosso</td>
+                <td class="num">3.658.813</td>
+                <td>'Texto pré-formatado'</td>
+            </tr>
+            <tr>
+                <td>Paraíba</td>
+                <td class="num">4.059.905</td>
+                <td>'Texto pequeno'</td>
+            </tr>
+            <tr>
+                <td>Piauí</td>
+                <td class="num">3.281.480</td>
+                <td>'Texto subscrito'</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">16.054.524</td>
+                <td>'Citação em bloco'</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td class="num">10.882.965</td>
+                <td>'Negrito'</td>
+            </tr>
+            <tr>
+                <td>Rondônia</td>
+                <td class="num">1.616.379</td>
+                <td>'Itálico'</td>
+            </tr>
+            <tr>
+                <td>Roraima</td>
+                <td class="num">636.707</td>
+                <td>'Texto destacado'</td>
+            </tr>
+            <tr>
+                <td>TO</td>
+                <td class="num">1.607.363</td>
+                <td>'Abreviação'</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <th scope="row">Total da população estimada:</th>
+                <td class="num"><strong>Soma Total</strong></td>
+                <td>Realizar a soma das colunas</td>
+            </tr>
+
+        </tfoot>
 </body>
+
 </html>
